Add slide in general vision

--- a/sections/convictions.tex
+++ b/sections/convictions.tex
@@ -40,3 +40,20 @@ Photo of Musk here!
     \item Avoid the humanity to die before the next 2 centuries
 \end{itemize}
 \end{frame}
+
+
+\begin{frame}
+\frametitle{Transportation technologies}
+\begin{itemize}
+    \itemsep1em
+    \item Electric cars with Tesla Motors
+    \item Add a transportation system between trains and planes, with the
+        Hyperloop
+    \item Reusable rockets, able to land, because:
+        \begin{quote}
+            ``Obviously it'd be kind of weird if the aliens landed in the ocean
+            with parachutes, we'd be like okay, nothing to fear.'' Elon Musk to
+            a journalist.
+        \end{quote}
+\end{itemize}
+\end{frame}
