Split part 2 and add content

--- a/le84_elon_musk.tex
+++ b/le84_elon_musk.tex
@@ -105,6 +105,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 \include{sections/convictions}
-\include{sections/ford_strategy}
+\include{sections/classic_transportations}
+\include{sections/space_travels}
 
 \end{document}
