Changes in the 1st part

--- a/le84_elon_musk.tex
+++ b/le84_elon_musk.tex
@@ -69,10 +69,9 @@
 \egroup
 
 \begin{frame}[noframenumbering,plain]
-    I want Iron Man to punch the Hulk here!
-	% \begin{textblock}{0}(5,-5)
-    %     \center{\includegraphics[width=.7\paperwidth]{images/logo-fsf.eps}}
-	% \end{textblock}
+	\begin{textblock}{0}(0,-29)
+        \center{\includegraphics[width=.84\paperwidth]{images/iron-man.jpg}}
+	\end{textblock}
 \end{frame}
 
 \logo{\includegraphics[height=1cm]{images/logo-utbm.eps}\hspace*{2em}}
