--- a/sections/convictions.tex
+++ b/sections/convictions.tex
@@ -3,12 +3,18 @@
 \subsection{Character sheets}
 \begin{frame}
 \frametitle{Character sheets}
-Photo of Musk here!
 \begin{itemize}
-    \itemsep1em
-    \item 44 years old
-    \item US \${}12.4 billion in 2016
-    \item PhD in applied physics at Stanford
+    \itemsep2em
+    \begin{columns}
+        \begin{column}{40mm}
+        \item South African from a modest family
+        \item PhD in applied physics at Stanford
+        \item US \${}12.4 billion in 2016
+        \end{column}
+        \begin{column}{35mm}
+        \includegraphics[width=45mm]{images/musk.jpg}
+        \end{column}
+    \end{columns}
     \item Does not want to die on Earth
 \end{itemize}
 \end{frame}
@@ -19,7 +25,8 @@ Photo of Musk here!
 \frametitle{Carrier}
 \begin{itemize}
     \itemsep1em
-    \item Paypal, co-founded in 1999 % cofounded
+    \item Zip2, co-founded in 1995
+    \item Paypal, co-founded in 1999
     \item CEO and CTO of SpaceX, founded in 2001
     \item CEO and CTO of Tesla Motors, founded in 2003
     \item Chairman of SolarCity, founded in 2006
@@ -33,7 +40,7 @@ Photo of Musk here!
 \begin{frame}
 \frametitle{Long term goals}
 \begin{itemize}
-    \itemsep1em
+    \itemsep1.5em
     \item Breaking the legacies of transportation technologies
     \item Traveling on Mars
     \item Stop using fossil fuels as our main power source
