Add more content for the TM part
Also add some sales that we can put in conclusion

--- a/sections/classic_transportations.tex
+++ b/sections/classic_transportations.tex
@@ -6,7 +6,9 @@
 \begin{itemize}
     \itemsep1em
     \item Cars were powered by electricity in 1903
-    \item Ford needed to reduce the production costs of thermal engines
+        % Invented the electric starter to just keep the noise inconvenience
+        % compared to electrical motors
+    \item Ford needed to reduce the production costs of cars production
     \item Developing a new way to produce faster % mass production
     \item Seems to have worked since 1908 and the Ford T
     \item Product advertisement was not needed between 1917 and 1923
@@ -15,7 +17,7 @@
 
 \subsection{The weird kid in the playground}
 \begin{frame}
-\frametitle{Everyone wants an electric car}
+\frametitle{Everyone sees the potential of an electric car}
 \begin{itemize}
     \itemsep1.5em
     \item Smooth feeling on the road
@@ -32,7 +34,7 @@
     \item What about the autonomy?
     \item The drive might be slow… no?
     \item Reducing the pollution… really? % preconceived ideas
-    \item OK but… it has to be today? Not… like… tomorrow?
+    \item It has to be today? Not… like… in 20 years?
 \end{itemize}
 \end{frame}
 
@@ -42,8 +44,52 @@
     \itemsep1.5em
     \item Selling classic cars would be difficult % 10 parts compared to 200
     \item Requires investments
-    \item Lobbying by the oil industry
-    \item Governments are not pushing it enough
+    \item Lobbying by the oil industry  % case with the BBC
+    \item Governments are not pushing it enough % because they impose taxes on
+        % oil and do not want to afraid "classic" constructors. Plus, the US is
+        % a big oil producer
+\end{itemize}
+\end{frame}
+
+
+\subsection{The autonomy is a real issue}
+
+\begin{frame}
+\frametitle{The autonomy is the real issue}
+\begin{itemize}
+    \itemsep1.5em
+    \item AC Propulsion
+    \item Maximum range: 250 miles
+    \item No station to charge the car
+    \item The most criticized point
+\end{itemize}
+\end{frame}
+
+\begin{frame}
+\frametitle{Superchargers}
+\begin{itemize}
+    \itemsep1.5em
+    \item 60 miles of range for every 10 minutes
+    \item Battery swap, \$60--\$80
+    \item Fast or free
+\end{itemize}
+\end{frame}
+
+
+\begin{frame}
+\frametitle{Solarcity and batteries manufacture}
+\begin{itemize}
+    \itemsep1.5em
+    \item
+\end{itemize}
+\end{frame}
+
+
+\begin{frame}
+\frametitle{Hyperloop}
+\begin{itemize}
+    \itemsep1.5em
+    \item Maybe there will be some slots for cars in it ;) ;)
 \end{itemize}
 \end{frame}
 
@@ -53,17 +99,29 @@
 \begin{frame}
 \frametitle{Electric cars can be cool}
 \begin{itemize}
-    \itemsep1.5em
-    \item Supercar: roadster
-    \item Powerful: 0–60 mph of 3.70 seconds and a quarter-mile test at 12.6 sec @ 102.6 mph (165.1 km/h)
-    \item US\$128,500
+    \itemsep1em
+    \item Tesla Roadster Sport
+    \item Powerful: 0--60 mph in 3.70 seconds
+    \item Range: 244 miles (393km)
+    \item US \$128,500
     \item No compromise
-    \item Regular cool upgrades
     % At this step, Musk has to reinvest a big part of his money or tesla would
     % die
 \end{itemize}
 \end{frame}
 
+\begin{frame}
+\begin{itemize}
+    \itemsep1.5em
+    \item Efficiency of battery-to-wheel motor: 88\% on average
+        % For comparison, internal combustion engines have a tank-to-wheel
+        % efficiency of about 15%
+        % https://en.wikipedia.org/wiki/Tesla_Roadster#Energy_efficiency
+    \item Regular cool free upgrades
+    \item 1st automobile constructor in the Silicon Valley
+    \item A lot of gadgets
+\end{itemize}
+\end{frame}
 
 \begin{frame}
 \frametitle{Electric cars can be classy}
@@ -77,14 +135,13 @@
 \end{itemize}
 \end{frame}
 
-
 \begin{frame}
-\frametitle{Not only super rich peoples can buy a good electric car}
+\frametitle{Not only rich peoples can buy a good electric car}
 \begin{itemize}
     \itemsep1.5em
-    \item Model X
-    \item Should be on the market in 2017
-    \item Should cost around US\$40,000
-    \item Not the car for everyone, but a big step
+    \item Model 3
+    \item Scheduled for 2017
+    \item Should cost around US\$35,000
+    \item Government's \$7500 EV tax credit
 \end{itemize}
 \end{frame}
