Starts the conclusion

--- a/le84_elon_musk.tex
+++ b/le84_elon_musk.tex
@@ -106,5 +106,6 @@
 \include{sections/convictions}
 \include{sections/classic_transportations}
 \include{sections/space_travels}
+\include{sections/conclusion}
 
 \end{document}
