Change the subtitle

--- a/le84_elon_musk.tex
+++ b/le84_elon_musk.tex
@@ -27,7 +27,7 @@
 
 \setbeamertemplate{navigation symbols}{}
 
-\title[Elon Musk's strategies to not die on earth]{
+\title[Elon Musk, the real Iron Man]{
     How Elon Musk, with his strategies, wants to bring our civilization to the
     next level?
 }
