Add content for TeslaM

--- a/sections/classic_transportations.tex
+++ b/sections/classic_transportations.tex
@@ -72,39 +72,93 @@
     \item 60 miles of range for every 10 minutes
     \item Battery swap, \$60--\$80
     \item Fast or free
+    \item US\@: 1,346 stations, 224 supercharger locations
+    \item 500 Supercharger locations
 \end{itemize}
 \end{frame}
 
 
 \begin{frame}
-\frametitle{Solarcity and batteries manufacture}
+\frametitle{Solarcity and batteries factory}
 \begin{itemize}
     \itemsep1.5em
-    \item
+    \item Tesla Gigafactory 1 % In the nevada
+    \item Slated to be operational in 2017
+    \item Reduce batteries production cost by at least 30\%
+    \item More than 30GWh each year
 \end{itemize}
+\end{frame}
+
+
+\begin{frame}
+\begin{center}
+\begin{columns}
+\begin{column}{330px}
+{
+    \begin{figure}[h!]
+        \centering
+        \includegraphics[width=310px]
+            {images/tesla-gigafactory.jpg}
+        \caption{Tesla Gigafactory1}
+        \scriptsize{Source :
+            \url{http://www.teslamotors.com}}
+    \end{figure}
+}
+\end{column}
+\end{columns}
+\end{center}
 \end{frame}
 
 
 \begin{frame}
 \frametitle{Hyperloop}
 \begin{itemize}
-    \itemsep1.5em
-    \item Maybe there will be some slots for cars in it ;) ;)
+    \itemsep2em
+    \begin{columns}
+        \begin{column}{39mm}
+            \item Between train and planes
+            \item 800miles/h (1200km/h)
+        \end{column}
+        \begin{column}{36mm}
+            \includegraphics[width=48mm]{images/hyperloop.jpg}
+        \end{column}
+    \end{columns}
+    \item Los Angeles San Francisco in 35mn (354-mile--570km)
 \end{itemize}
 \end{frame}
 
 
 \subsection{A plan in 3 big steps}
 
+{
+\logo{}
 \begin{frame}
 \frametitle{Electric cars can be cool}
+\begin{center}
+\begin{columns}
+\begin{column}{330px}
+{
+    \begin{figure}[h!]
+        \centering
+        \includegraphics[width=250px]
+            {images/tesla-roadster.jpg}
+        \caption{Tesla Roadster}
+    \end{figure}
+}
+\end{column}
+\end{columns}
+\end{center}
+\end{frame}
+}
+
+\begin{frame}
 \begin{itemize}
-    \itemsep1em
+    \itemsep1.5em
     \item Tesla Roadster Sport
     \item Powerful: 0--60 mph in 3.70 seconds
     \item Range: 244 miles (393km)
-    \item US \$128,500
     \item No compromise
+    \item US \$128,500
     % At this step, Musk has to reinvest a big part of his money or tesla would
     % die
 \end{itemize}
@@ -118,30 +172,50 @@
         % efficiency of about 15%
         % https://en.wikipedia.org/wiki/Tesla_Roadster#Energy_efficiency
     \item Regular cool free upgrades
-    \item 1st automobile constructor in the Silicon Valley
+    \item 1\textsuperscript{st} automobile constructor in the Silicon Valley
     \item A lot of gadgets
 \end{itemize}
 \end{frame}
 
+{
+\logo{}
 \begin{frame}
 \frametitle{Electric cars can be classy}
+\begin{center}
+\begin{columns}
+\begin{column}{330px}
+{
+    \begin{figure}[h!]
+        \centering
+        \includegraphics[width=300px]
+            {images/tesla-model-s.jpg}
+        \vspace{-0.5em}
+        \caption{Tesla Model S}
+    \end{figure}
+}
+\end{column}
+\end{columns}
+\end{center}
+\end{frame}
+}
+
+\begin{frame}
 \begin{itemize}
     \itemsep1.5em
     \item Model S and then Model X
-    \item More ``affordable'': US\$80,000
+    \item More ``affordable'': US \$80,000
     \item Range: 320 miles (520km)
     \item Autopilot and cool features
-    \item Really good reviews
 \end{itemize}
 \end{frame}
 
 \begin{frame}
-\frametitle{Not only rich peoples can buy a good electric car}
+\frametitle{Electric cars for the mass}
 \begin{itemize}
     \itemsep1.5em
     \item Model 3
     \item Scheduled for 2017
-    \item Should cost around US\$35,000
+    \item Should cost around US \$35,000
     \item Government's \$7500 EV tax credit
 \end{itemize}
 \end{frame}
