Change Sommaire to Plan

--- a/le84_elon_musk.tex
+++ b/le84_elon_musk.tex
@@ -84,7 +84,7 @@
 
 \begin{frame}
 	\begin{small}
-	\frametitle{Sommaire}
+	\frametitle{Plan}
 	\tableofcontents
 	\end{small}
 \end{frame}
@@ -93,7 +93,7 @@
 {
 	\begin{small}
 	\begin{frame}
-		\frametitle{Sommaire}
+		\frametitle{Plan}
 		\tableofcontents[currentsection]
 	\end{frame}
 	\end{small}
