--- a/le84_elon_musk.tex
+++ b/le84_elon_musk.tex
@@ -28,8 +28,8 @@
 \setbeamertemplate{navigation symbols}{}
 
 \title[Elon Musk, the real Iron Man]{
-    How Elon Musk, with his strategies, wants to bring our civilization to the
-    next level?
+    How does Elon Musk wants to bring our civilisation, with his strategies, to
+    the next level?
 }
 \author[HOUDAYER \and KIM \and RUHIER]{
 	Benoit HOUDAYER\\
@@ -39,7 +39,7 @@
 	Anthony RUHIER
 }
 \institute[LE84 - UTBM]{
-    Business english (LE84) - Université Technologique de Belfort Montbéliard}
+    Business English (LE84) - Université de Technologie Belfort--Montbéliard}
 \date{January 2016}
 
 \begin{document}
