--- a/sections/classic_transportations.tex
+++ b/sections/classic_transportations.tex
@@ -8,22 +8,22 @@
     \item Cars were powered by electricity in 1903
         % Invented the electric starter to just keep the noise inconvenience
         % compared to electrical motors
-    \item Ford needed to reduce the production costs of cars production
-    \item Developing a new way to produce faster % mass production
+    \item Ford needed to reduce its car production cost
+    \item Inventing a new way to produce faster % mass production
     \item Seems to have worked since 1908 and the Ford T
-    \item Product advertisement was not needed between 1917 and 1923
+    \item No product advertisement was needed between 1917 and 1923
 \end{itemize}
 \end{frame}
 
-\subsection{The weird kid in the playground}
+\subsection{One weird kid in the playground}
 \begin{frame}
-\frametitle{Everyone sees the potential of an electric car}
+\frametitle{Everyone sees the potential of electric cars}
 \begin{itemize}
     \itemsep1.5em
     \item Smooth feeling on the road
-    \item Decrease the dependency to oil
+    \item Decreasing oil dependency
     \item Reduces the pollution released compares to classic cars
-    \item Everybody seems to agree it is the future car
+    \item Everybody seems to agree that it is the future car
 \end{itemize}
 \end{frame}
 
@@ -32,18 +32,18 @@
 \begin{itemize}
     \itemsep1.5em
     \item What about the autonomy?
-    \item The drive might be slow… no?
+    \item Driving might be slow… no?
     \item Reducing the pollution… really? % preconceived ideas
-    \item It has to be today? Not… like… in 20 years?
+    \item Does it have to be today? Not… like… in 20 years?
 \end{itemize}
 \end{frame}
 
 \begin{frame}
-\frametitle{No one wants electric cars to be on the market}
+\frametitle{No one wants electric cars to be on market}
 \begin{itemize}
     \itemsep1.5em
-    \item Selling classic cars would be difficult % 10 parts compared to 200
-    \item Requires investments
+    \item Selling gasoline-based cars would be difficult % 10 parts compared to 200
+    \item Requiring more investments
     \item Lobbying by the oil industry  % case with the BBC
     \item Governments are not pushing it enough % because they impose taxes on
         % oil and do not want to afraid "classic" constructors. Plus, the US is
@@ -52,7 +52,7 @@
 \end{frame}
 
 
-\subsection{The autonomy is a real issue}
+\subsection{Autonomy is a real issue}
 
 \begin{frame}
 \frametitle{The autonomy is the real issue}
@@ -85,7 +85,7 @@
     \item Tesla Gigafactory 1 % In the nevada
     \item Slated to be operational in 2017
     \item Reduce batteries production cost by at least 30\%
-    \item More than 30GWh each year
+    \item More than 30GWh/year
 \end{itemize}
 \end{frame}
 
@@ -123,7 +123,7 @@
             \includegraphics[width=48mm]{images/hyperloop.jpg}
         \end{column}
     \end{columns}
-    \item Los Angeles San Francisco in 35mn (354-mile--570km)
+    \item Los Angeles -- San Francisco in 35mn (354 miles -- 570km)
 \end{itemize}
 \end{frame}
 
@@ -172,8 +172,8 @@
         % efficiency of about 15%
         % https://en.wikipedia.org/wiki/Tesla_Roadster#Energy_efficiency
     \item Regular cool free upgrades
-    \item 1\textsuperscript{st} automobile constructor in the Silicon Valley
-    \item A lot of gadgets
+    \item 1\textsuperscript{st} automobile constructor in Silicon Valley
+    \item Loads of gadgets
 \end{itemize}
 \end{frame}
 
@@ -203,7 +203,7 @@
 \begin{itemize}
     \itemsep1.5em
     \item Model S and then Model X
-    \item More ``affordable'': US \$80,000
+    \item More ``affordable'': US\$80,000
     \item Range: 320 miles (520km)
     \item Autopilot and cool features
 \end{itemize}
@@ -215,7 +215,7 @@
     \itemsep1.5em
     \item Model 3
     \item Scheduled for 2017
-    \item Should cost around US \$35,000
+    \item Expected cost: around US\$35,000
     \item Government's \$7500 EV tax credit
 \end{itemize}
 \end{frame}
