--- a/sections/convictions.tex
+++ b/sections/convictions.tex
@@ -8,7 +8,7 @@
     \begin{columns}
         \begin{column}{40mm}
         \item South African from a modest family
-        \item PhD in applied physics at Stanford
+        \item PhD in applied physics at Stanford University
         \item US \${}12.4 billion in 2016
         \end{column}
         \begin{column}{35mm}
@@ -27,9 +27,9 @@
     \itemsep1em
     \item Zip2, co-founded in 1995
     \item Paypal, co-founded in 1999
-    \item CEO and CTO of SpaceX, founded in 2001
-    \item CEO and CTO of Tesla Motors, founded in 2003
-    \item Chairman of SolarCity, founded in 2006
+    \item SpaceX CEO and CTO, founded in 2001
+    \item Tesla Motors CEO and CTO, founded in 2003
+    \item SolarCity chairman, founded in 2006
     \item Hyperloop, concept created in 2014
     \item Co-chairman of OpenAI, co-founded in 2015
 \end{itemize}
@@ -41,10 +41,10 @@
 \frametitle{Long term goals}
 \begin{itemize}
     \itemsep1.5em
-    \item Breaking the legacies of transportation technologies
-    \item Traveling on Mars
-    \item Stop using fossil fuels as our main power source
-    \item Avoid the humanity to die before the next 2 centuries
+    \item To break the legacies of transportation technologies
+    \item To travel to Mars
+    \item To stop using fossil fuels as our main power source
+    \item To avoid the humanity to die before the next 2 centuries
 \end{itemize}
 \end{frame}
 
@@ -54,9 +54,9 @@
 \begin{itemize}
     \itemsep1em
     \item Electric cars with Tesla Motors
-    \item Add a transportation system between trains and planes, with the
+    \item Add a transportation system between trains and planes, with
         Hyperloop
-    \item Reusable rockets, able to land, because:
+    \item Reusable rockets which are able to land, because:
         \begin{quote}
             ``Obviously it'd be kind of weird if the aliens landed in the ocean
             with parachutes, we'd be like okay, nothing to fear.'' Elon Musk to
