--- a/sections/space_travels.tex
+++ b/sections/space_travels.tex
@@ -30,8 +30,6 @@
     \end{itemize}
 \end{frame}
 
-\subsection{The Solution}
-
 \begin{frame}
     \frametitle{The Solution}
     \begin{enumerate}
@@ -68,13 +66,13 @@
     \end{itemize}
 \end{frame}
 
-\subsection{SpaceX's current technology}
+\subsection{SpaceX's Technology}
 
 {
     \logo{}
 
 \begin{frame}
-    \frametitle{SpaceX's current technology}
+    \frametitle{SpaceX's Current Technology}
     \begin{columns}
         \begin{column}{60mm}
             The merlin engine :\\
@@ -92,7 +90,7 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{SpaceX's current technology}
+    \frametitle{SpaceX's Current technology}
     \begin{columns}
         \begin{column}{60mm}
             The falcon 9 :\\
@@ -111,7 +109,7 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{SpaceX's current technology}
+    \frametitle{SpaceX's Current technology}
     \begin{columns}
         \begin{column}{50mm}
             Dragon :\\
@@ -128,8 +126,6 @@
     \end{columns}
 \end{frame}
 }
-
-\subsection{SpaceX's Future Technology}
 
 \begin{frame}
     \frametitle{SpaceX's Future Technology}
