Add a photo of the model s cockpit

--- a/sections/classic_transportations.tex
+++ b/sections/classic_transportations.tex
@@ -199,6 +199,29 @@
 \end{frame}
 }
 
+
+{
+\logo{}
+\begin{frame}
+\begin{center}
+\begin{columns}
+\begin{column}{330px}
+{
+    \begin{figure}[h!]
+        \centering
+        \includegraphics[width=300px]
+            {images/tesla-model-s-cockpit.jpg}
+        \vspace{-0.5em}
+        \caption{Tesla Model S cockpit}
+    \end{figure}
+}
+\end{column}
+\end{columns}
+\end{center}
+\end{frame}
+}
+
+
 \begin{frame}
 \begin{itemize}
     \itemsep1.5em
