--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -43,34 +43,31 @@
 \end{center}
 \end{frame}
 
-
-\begin{frame}
-\begin{center}
-\begin{columns}
-\begin{column}{330px}
 {
-    \begin{figure}[h!]
-        \centering
-        \includegraphics[width=200px]
-            {images/tesla-vehicules-sales.jpg}
-        \caption{Tesla Motors vehicules sales}
-        \scriptsize{Source :
-            \url{http://my.tesla.com}}
-    \end{figure}
+    \logo{}
+\begin{frame}
+    \frametitle{SpaceX today}
+    \begin{columns}
+        \begin{column}{60mm}
+            \begin{itemize}
+                \item SpaceX is now profitable
+                \item 20/24 successful launches
+                \item 30+ planned commercial missions
+                \item Estimated value : 12 B\$
+            \end{itemize}
+        \end{column}
+        \begin{column}{40mm}
+            \only<7->{\includegraphics[width=40mm]{images/dragon_2}}
+        \end{column}
+    \end{columns}
+\end{frame}
 }
-\end{column}
-\end{columns}
-\end{center}
-\end{frame}
-
 
 \begin{frame}
 \end{frame}
 
-
 \begin{frame}
 \end{frame}
-
 
 \begin{frame}
 \frametitle{Gotcha!}
